--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <title>Global Human Society | A Socio Political Community for Humanisam</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
   
