--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Global Human Society | A Socio Political Community for Humanisam</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
   </head>
   
   
